# clinical-clarity-2

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_orgs_users_rls.py  0002_phase2_core_entities.py  0003_enrollment_weeks.py  0004_documents_and_parse_jobs.py  0005_visit_confidence.py  0006_user_site_assignments.py  0007_soa_snapshots.py  0008_trial_status_planned.py
backend/app/: config.py  db.py  deps.py  main.py  security.py
backend/app/models/: __init__.py  attrition_curve.py  base.py  document.py  enrollment_week.py  org.py  org_settings.py  site.py  site_trial.py  soa_parse_job.py  soa_snapshot.py  trial.py  user.py  user_site_assignment.py  visit.py
backend/app/routers/: attrition_curves.py  auth.py  documents.py  enrollment_weeks.py  exports.py  forecast.py  imports.py  org_settings.py  orgs.py  site_trials.py  sites.py  soa_snapshots.py  trials.py  users.py  visits.py
backend/app/schemas/: arm.py  attrition_curve.py  auth.py  documents.py  enrollment_week.py  forecast.py  org.py  org_settings.py  site.py  site_trial.py  soa_parse_job.py  trial.py  users.py  visit.py
backend/app/services/: claude_soa.py  csv_export.py  csv_import.py  enrollment_audit.py  enrollment_variance.py  forecast_adapter.py  metrics_adapter.py  resolution.py  soa_snapshot.py  trial_activation.py
backend/app/storage/: __init__.py
backend/app/worker/: __init__.py  soa_parser.py
backend/tests/: conftest.py  test_admin_delete.py  test_claude_soa.py  test_documents_and_parse_jobs.py  test_enrollment_weeks.py  test_exports.py  test_forecast_adapter.py  test_forecast_scope.py  test_health.py  test_imports.py  test_rls_isolation.py  test_soa_snapshots.py  test_trial_setup_e2e.py  test_users.py
backend/tests/fixtures/: claude_soa_response.json
docker/postgres-init/: 01-roles.sql
docs/: architecture.md  deploy.md  phase.md  prd.md  v2-what-if.md
engine/: pyproject.toml
engine/engine/: __init__.py  attrition.py  duration.py  forecast.py  metrics.py  types.py  windows.py
engine/tests/: _builders.py  test_attrition.py  test_duration.py  test_engine_purity.py  test_forecast_golden_masters.py  test_metrics_golden_masters.py  test_placeholder.py  test_windows.py
frontend/: Dockerfile  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/e2e/: phase3-smoke.spec.ts  phase4-smoke.spec.ts  phase5-smoke.spec.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  print.css
frontend/src/components/: AppShell.tsx  Breadcrumbs.tsx  EmptyState.tsx  HistoryDrawer.tsx  KpiStrip.tsx  MetricToggle.tsx  ReadinessIcons.tsx  ScopeToggle.tsx  SoaReviewTable.tsx  ThemeToggle.tsx  TrialColorBadge.tsx  TrialStatusActions.tsx  VarianceHint.tsx
frontend/src/components/SpreadsheetGrid/: SpreadsheetGrid.tsx  index.ts  types.ts  useClipboardPaste.ts  useKeyboardNav.ts
frontend/src/components/__tests__/: Breadcrumbs.test.tsx  EmptyState.test.tsx  MetricToggle.test.tsx  ScopeToggle.test.tsx  SoaReviewTable.test.tsx  ThemeToggle.test.tsx  TrialStatusActions.test.tsx
frontend/src/hooks/: useDocumentTitle.ts  usePrintToPdf.ts  useUnsavedChangesGuard.ts
frontend/src/hooks/__tests__/: useDocumentTitle.test.ts
frontend/src/lib/: chartMetric.ts  formatters.ts  theme.ts  trialColors.ts  utilization.ts
frontend/src/lib/__tests__/: formatters.test.ts  (+2 more)
frontend/src/pages/: AdminSettings.tsx  Home.tsx  Import.tsx  Login.tsx  Metrics.tsx  NetworkGrid.tsx  Onboarding.tsx  ProjectionGrid.tsx  SiteCalendar.tsx  SiteChart.tsx  Studies.tsx  TrialDetail.tsx  TrialWizard.tsx
(+5 files in other folders)
