[project]
name = "clinical-clarity-2"
version = "0.1.0"
description = "Clinical Clarity — multi-tenant SaaS for clinical trial site networks (volume forecasting)"
requires-python = ">=3.12,<3.13"

# This root pyproject is workspace metadata only. The two real Python packages
# are /engine and /backend, each with its own pyproject.toml managed by uv.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",  # ruff format handles line length
  "B008",  # FastAPI uses Depends(...)/Cookie(...) in defaults; that's the idiom
  "RUF001",  # Unicode ×, –, etc. are intentional in string literals (the SoA prompt)
  "RUF002",  # same, in docstrings (math notation)
  "RUF003",  # same, in comments
  "RUF012",  # arq WorkerSettings declares functions=[] at class scope; that's the framework's idiom
]

[tool.ruff.format]
quote-style = "double"
