[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Clinical Clarity"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "argon2-cffi>=23.1",
  "itsdangerous>=2.2",
  "python-multipart>=0.0.12",
  "email-validator>=2.2",
  # The /engine package, local editable. CLAUDE.md golden rule #2 keeps the
  # engine pure (no web/DB imports); the backend's forecast/metrics adapters
  # are the only place engine talks to DB-shaped data.
  "engine",
  "aiobotocore>=2.15",
  "arq>=0.26",
  "anthropic>=0.40",
  # XLSX templates ship with a reference sheet (existing site/trial names)
  # so users fill in the spreadsheet against the live source of truth.
  "openpyxl>=3.1",
]

[tool.uv.sources]
engine = { path = "../engine", editable = true }

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
extend = "../pyproject.toml"
