[project]
name = "engine"
version = "0.1.0"
description = "Pure-Python forecast engine for Clinical Clarity. Zero web/db/HTTP deps."
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
extend = "../pyproject.toml"
